# meteoview

./: .gitignore  .gitmodules  CMakeLists.txt  build.sh  conanfile.txt  config.json  configure.sh  dockerfile  license.txt  readme.md  start_docker.sh  stop_docker.sh
arch/: meteoview-arch
cfg/C_Cpp_lib_template_cfg/: CMakeLists.txt
libs/ConfigCore/: BasicCfg.hpp  CMakeLists.txt  CfgReader.hpp  ChmiCfg.hpp  MeteoService.hpp  ModellzentraleCfg.hpp  Sat24Cfg.hpp
libs/ConfigCore/src/: BasicCfg.cpp  CfgReader.cpp  ChmiCfg.cpp  MeteoService.cpp  ModellzentraleCfg.cpp  Sat24Cfg.cpp
libs/ContentProvider/: CMakeLists.txt  ChmiProvider.hpp  ContentProvider.hpp  ContentProviderFactory.hpp  ModellzentraleProvider.hpp  Sat24Provider.hpp
libs/ContentProvider/src/: ChmiProvider.cpp  ContentProvider.cpp  ContentProviderFactory.cpp  ModellzentraleProvider.cpp  Sat24Provider.cpp
libs/ImageManager/: CMakeLists.txt  ImageObj.hpp
src/: main.cpp
